<resources>
    <string name="app_name">WGU Student Scheduler</string>

    <!--main_landing-->
    <string name="landing_terms">Terms</string>
    <string name="landing_courses">Courses</string>
    <string name="landing_mentors">Mentors</string>
    <string name="landing_assessments">Assessments</string>

    <!--term_list-->
    <string name="addTerm">Add Term</string>
    <string name="deleteTerm">Delete Term</string>

    <!--term_details-->
    <string name="name">Name</string>
    <string name="termName">Term Name</string>

    <!--course_list-->
    <string name="addCourses">Add Courses</string>

    <!--course_details-->
    <string name="startDateEx">Start Date</string>
    <string name="endDateEx">End Date</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="courseName">Course Name</string>
    <string name="manageAssessments">Manage Assessments</string>
    <string name="manageMentors">Manage Mentors</string>
    <string name="notes">Notes</string>
    <string name="alert">Alert</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>

    <!--mentor_list-->
    <string name="addMentor">Add Mentor</string>

    <!--notes-->
    <string name="notesName">Title</string>
    <string name="information">Information</string>

    <!--notes_list-->
    <string name="addNotes">Add Notes</string>

    <!--assessment_list-->
    <string name="addAssessment">Add Assessment</string>

    <!--assessment_details-->
    <string name="assessmentName">Assessment Name</string>
    <string name="goalDate">Goal Date</string>

    <!--mentor_details-->
    <string name="mentorName">Mentor Name</string>
    <string name="mentorPhoneEx">1-800-227-1000</string>
    <string name="mentorEmailEx">email@wgu.edu</string>
    <string name="viewCourses">View Courses</string>
    <string name="manageAssessmentsCourses">Manage Courses</string>


</resources>

