<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MentorDetails">

    <EditText
        android:id="@+id/ptMentorDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="@string/mentorName"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/ptMentorDetailPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/mentorPhoneEx"
        android:inputType="phone"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/ptMentorDetailEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/mentorEmailEx"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMentorDetailSave"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnMentorDetailDelete"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>