<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AssessmentDetails">

    <Button
        android:id="@+id/btnAssessmentDetailsSave"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/ptAssessmentDetailName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="53dp"
        android:ems="10"
        android:hint="@string/assessmentName"
        android:inputType="text"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvAssessmentDetailGoalDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/goalDate"
        android:inputType="date"
        android:textAlignment="center" />

    <Switch
        android:id="@+id/ptAssessmentDetailGoalAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        android:text="@string/alert"
        android:textAlignment="center" />

    <Spinner
        android:id="@+id/spinnerAssessmentDetailType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="15dp" />

</LinearLayout>