<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TermDetails">


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnTermDetailsSave"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="16dp"
                android:onClick="saveTerm"
                android:text="@string/save"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/ptTermDetailsName"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/termName"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvTermDetailsStart"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/startDateEx"
                android:inputType="date"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvTermDetailsEnd"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/endDateEx"
                android:inputType="date"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnTermDetailsAddCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/addCourses" />

            <ListView
                android:id="@+id/lvCourseList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>

